# yoke

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  dagger.json
.claude/commands/: release.md
.dagger/: go.mod  main.go
.github/workflows/: ci.yml  release-binaries.yml
changes/: v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.3.0.md  v0.4.0.md  v0.4.1.md
examples/: render-gemini.nu  serve.nu
fixtures/: anthropic-multi-tool.jsonl  anthropic-tool-use-read-file.jsonl  gemini-web-search-laptops.jsonl  gemini-web-search-tokyo.jsonl
scripts/: check.sh  cross-build-darwin.sh
src/: main.rs  nu_tool.rs
tests/: test-render.nu
tests/tools/nu/: case1.md  perform.nu
ux/: render-gemini.nu  serve.nu
ux/tests/: test-render.nu
yoagent/: .gitignore  Cargo.toml
yoagent/src/: agent_loop.rs  context.rs  sub_agent.rs  types.rs
yoagent/src/provider/: anthropic.rs  azure_openai.rs  bedrock.rs  google.rs  google_vertex.rs  mock.rs  model.rs  openai_compat.rs  openai_responses.rs  traits.rs
yoagent/src/tools/: mod.rs  web_search.rs
yoagent/tests/: agent_test.rs  integration_anthropic.rs  integration_gemini.rs  integration_openai.rs  integration_openrouter.rs  serialization_test.rs  sub_agent_test.rs
yoagent/tests/fixtures/: anthropic_websearch.txt
