[package]
name = "yoke"
version = "0.1.0-dev"
edition = "2021"
description = "Headless agent harness. JSONL in, JSONL out."
license = "MIT"

[dependencies]
yoagent = { path = "../yoagent" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json"] }
