[package]
name = "yoke"
version = "0.2.2"
edition = "2021"
description = "Headless agent harness. JSONL in, JSONL out."
license = "MIT"

[dependencies]
yoagent = { path = "yoagent" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
async-trait = "0.1"
nu-cli = "0.111.0"
nu-cmd-lang = "0.111.0"
nu-command = "0.111.0"
nu-engine = "0.111.0"
nu-parser = "0.111.0"
nu-protocol = "0.111.0"
